syntax = "proto3";
message ProtobufFeedEventCardInfoV2Adapter {
	string setting_key = 1;
	string schema = 2;
	string fe_data = 3;
	string client_data = 4;
	string extra = 5;
}